Conway/general/gol-any.css
.title h1 {
  font-size: 4vw;
  margin-top: 7px;
}

#loc {
  margin-left: 3rem;
}

.play-stop-button {
  width: 3em;
  height: 3em;
  background-color: transparent;
  color: white;
  border-style: none;
  transition: all 0.3s ease;
}

.play-stop-button > svg {
  width: 2.3em;
  border-width: 0.1em;
  border-color: white;
  border-style: solid;
  border-radius: 50%;
}

.play-stop-button > svg:hover {
  background-color: rgba(0,0,0,0.8);
  box-shadow: 0px 0px 10px rgba(255,255,100,1);
  text-shadow: 0px 0px 10px rgba(255,255,100,1);
}

.play-stop-button-play {
  display: inline;
}

.play-stop-button-playing .play-stop-button-play {
  display: none;
}

.play-stop-button-pause {
  display: none;
}

.play-stop-button-playing .play-stop-button-pause {
  display: inline;
}

.main-row {
  height: unset;
}
.main-content {
  height: calc(98vh - 300px);
}

